# osc-demo

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.sh  test_config.sh  test_dynamic_config.sh
.github/: copilot-setup-steps.yml
.github/workflows/: build.yml  copilot-setup-steps.yml
_codeql_build_dir/juce_osc_app/OSCControlApp_artefacts/JuceLibraryCode/: Info.txt
_codeql_build_dir/juce_osc_app/OSCControlApp_artefacts/JuceLibraryCode/Release/: Defs.txt
juce_osc_app/: CMakeLists.txt
juce_osc_app/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
src/: main.cpp
